added new projects

--- a/index.html
+++ b/index.html
@@ -310,6 +310,27 @@
 							<div class="filters-content">
 									<div class="row grid">
 
+
+										<div class="single-portfolio col-sm-4 all ComputerVision">
+											<div class="relative">
+											<div class="thumb">
+													<div class="overlay overlay-bg"></div>
+													 <img class="image img-fluid" src="img/dropout.png" alt="">
+												</div>
+					<a href="https://towardsdatascience.com/dont-use-dropout-in-convolutional-networks-81486c823c16">
+						<div class="middle">
+							<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+						</div>
+					</a>
+											</div>
+												<div class="p-inner">
+													<a href="https://towardsdatascience.com/dont-use-dropout-in-convolutional-networks-81486c823c16">
+														<h5>Don't Use Dropout</h5></a>
+														<div class="cat">Aug 14, 2018</div>
+												</div>
+										</div>
+
+
 										<div class="single-portfolio col-sm-4 all ComputerVision">
 											<div class="relative">
 												<div class="thumb">
@@ -413,24 +434,7 @@
 											</div>
 
 
-											<div class="single-portfolio col-sm-4 all DataScience">
-												<div class="relative">
-												<div class="thumb">
-														<div class="overlay overlay-bg"></div>
-														 <img class="image img-fluid" src="img/titanicsquare.jpg" alt="">
-													</div>
-						<a href="Titanic.html">
-							<div class="middle">
-								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-							</div>
-						</a>
-												</div>
-													<div class="p-inner">
-														<a href="Titanic.html">
-															<h5>Data Science Lifecycle</h5></a>
-															<div class="cat">May 3, 2018</div>
-													</div>
-											</div>
+
 
 									</div>
 							</div>
