--- a/about.html
+++ b/about.html
@@ -361,7 +361,7 @@
 																<h4>Follow Me</h4>
 																<p>Let's be social. </p>
 																<div class="footer-social d-flex align-items-center">
-																		<a href="https://www.facebook.com/harrison.jansma"><i class="fa fa-facebook"></i></a>
+																		<a href="https://medium.com/@harrisonjansma"><i class="fa fa-medium"></i></a>
 																		<a href="http://www.linkedin.com/in/harrisonjansma"><i class="fa fa-linkedin"></i></a>
 																		<a href="https://github.com/harrisonjansma"><i class="fa fa-github"></i></a>
 
