--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
 							</div>
 
 							<div class="filters-content">
-									<div class="row grid">
+									<div class="row grid" style="height:865px;">
 
 										<div class="single-portfolio col-sm-4 all ComputerVision">
 											<div class="relative">
