--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 							</div>
 
 							<div class="filters-content">
-									<div class="row grid">
+									<div class="row grid" style="height:865px;">
 
 
 										<div class="single-portfolio col-sm-4 all ComputerVision">
