--- a/about.html
+++ b/about.html
@@ -118,7 +118,15 @@
 									<div class="menu-content">
 											<div class="title text-center">
 													<h1 class="mb-10">Skills Expertisse</h1>
+													 1 - Basic<span style="display: inline-block; width: 2ch;">&#9;</span>
+														 2 - Novice<span style="display: inline-block; width: 2ch;">&#9;</span>
+														 3 - Intermediate<span style="display: inline-block; width: 2ch;">&#9;</span>
+														 <p>
+															4 - Advanced<span style="display: inline-block; width: 2ch;">&#9;</span>
+															 5 - Expert</p>
+
 											</div>
+
 									</div>
 							</div>
 
@@ -129,25 +137,25 @@
 
 
 
-
+					<div class="container">
 						<div class="row skillbar-wraps">
 							<div class="col-lg-4 skill-left">
 								<h4 class="text-center pt-50"> Devops </h4>
 								<div class="single-skill">
 									<p>
-										Server Management (Linux / Flask) 60%
+										Server Management (Linux / Flask) -   3
 									</p>
 									<div class="skill" data-width="60"></div>
 								</div>
 								<div class="single-skill">
 									<p>
-										Containerization (Docker) 50%
+										Database Manipulation (SQL) -   2
 									</p>
-									<div class="skill" data-width="50"></div>
+									<div class="skill" data-width="40"></div>
 								</div>
 								<div class="single-skill">
 									<p>
-										Cluster Computing (Spark / Hive) 20%
+										Cluster Computing (Spark) - 1
 									</p>
 									<div class="skill" data-width="20"></div>
 								</div>
@@ -155,52 +163,55 @@
 
 
 							<div class="col-lg-4 skill-right">
-								<h4 class="text-center pt-50"> Data Science </h4>
+								<h4 class="text-center pt-50"> Data Analytics </h4>
 								<div class="single-skill">
 									<p>
-										Python 85%
-									</p>
-									<div class="skill" data-width="85"></div>
-								</div>
-
-								<div class="single-skill">
-									<p>
-										Macing Learning Frameworks 70%
-									</p>
-									<div class="skill" data-width="70"></div>
-								</div>
-								<div class="single-skill">
-									<p>
-										Data Processing and Visualizations 80%
+										Visualizations and Presentation - 4
 									</p>
 									<div class="skill" data-width="80"></div>
 								</div>
+
+								<div class="single-skill">
+									<p>
+										Data Cleaning - 4
+									</p>
+									<div class="skill" data-width="80"></div>
+								</div>
+
+
+								<div class="single-skill">
+									<p>
+										Statistical Methods - 3
+									</p>
+									<div class="skill" data-width="60"></div>
+								</div>
 							</div>
 
 							<div class="col-lg-4 skill-right">
-								<h4 class="text-center pt-50">Front-end Development</h4>
+								<h4 class="text-center pt-50">Machine Learning (AI)</h4>
 								<div class="single-skill">
 									<p>
-										HTML / CSS 50%
+										Deep Learning (Keras) - 4
 									</p>
-									<div class="skill" data-width="50"></div>
+									<div class="skill" data-width="80"></div>
 								</div>
 
 								<div class="single-skill">
 									<p>
-										Front-end Frameworks 20%
+										NLP (NLTK) - 3
 									</p>
-									<div class="skill" data-width="20"></div>
+									<div class="skill" data-width="60"></div>
 								</div>
 								<div class="single-skill">
 									<p>
-										JavaScript 20%
+										Predictive Analytics (SKLearn) - 3
 									</p>
-									<div class="skill" data-width="20"></div>
+									<div class="skill" data-width="60"></div>
 								</div>
 							</div>
 
 						</div>
+					</div>
 
 					</section>
 
