--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 							<h2 class="mt-10 mb-20">Harrison Jansma</h2>
 							<p>
-								Machine learning, backend development, and computer vision specialist.
+								Data scientist, machine learning engineer, and web app developer.
 							</p>
 
 							<a href="#portfolio" class="primary-btn text-uppercase mb-20">My Projects</a>
@@ -156,7 +156,7 @@
 								<span class="lnr lnr-cloud-check"></span>
 								<a><h4>Cluster Computing</h4></a>
 								<p>
-									I maintain my own DigitalOcean servers, and use them as a hub for model training and deployment.
+									I am learning about horizontally scaled databases. I hope to implement these ideas soon.
 								</p>
 							</div>
 						</div>
@@ -165,7 +165,7 @@
 								<span class="lnr lnr-laptop-phone"></span>
 								<a><h4>Web App Development</h4></a>
 								<p>
-									I build front-end interfaces and harness machine learning to make web apps that bring value to everyone.
+									I implement machine learning to make smarter internet-based applications.
 								</p>
 							</div>
 						</div>
@@ -174,7 +174,7 @@
 								<span class="lnr lnr-database"></span>
 								<a><h4>Backend Development</h4></a>
 								<p>
-									The apps that make our lives easier rely on a great network of interconnected systems.
+										I maintain my own DigitalOcean servers. I use them for database storage, model training, and model deployment.
 								</p>
 							</div>
 						</div>
@@ -224,9 +224,9 @@
 				</div>
 				<div class="single-skill">
 					<p>
-						Database Manipulation (SQL) -   2
+						Database Manipulation (SQL) -   3
 					</p>
-					<div class="skill" data-width="40"></div>
+					<div class="skill" data-width="60"></div>
 				</div>
 				<div class="single-skill">
 					<p>
@@ -241,14 +241,14 @@
 				<h4 class="text-center pt-50"> Data Analytics </h4>
 				<div class="single-skill">
 					<p>
-						Visualizations and Presentation - 4
+						Visualization and Presentation - 5
 					</p>
-					<div class="skill" data-width="80"></div>
+					<div class="skill" data-width="100"></div>
 				</div>
 
 				<div class="single-skill">
 					<p>
-						Data Cleaning - 4
+						Data Munging - 4
 					</p>
 					<div class="skill" data-width="80"></div>
 				</div>
@@ -273,13 +273,13 @@
 
 				<div class="single-skill">
 					<p>
-						NLP (NLTK) - 3
+						Natural Language Processing - 3
 					</p>
 					<div class="skill" data-width="60"></div>
 				</div>
 				<div class="single-skill">
 					<p>
-						Predictive Analytics (SKLearn) - 3
+						Predictive Modelling (SKLearn) - 3
 					</p>
 					<div class="skill" data-width="60"></div>
 				</div>
