--- a/about.html
+++ b/about.html
@@ -94,15 +94,11 @@
 
 
 						<div class="col-lg-12 pt-60">
-							<p>
-								I am a graduate student and researcher at the University of Texas at Dallas. I am passionate about machine learning, computer vision, and web app development.	In my spare time I build websites, read research papers, and play Overwatch. I also exercise regularly and play with my german shepherd, Huckleberry.
-							</p>
-							<p>
-								I love every part of web application development. From creating functional interfaces to deploying and maintaining the servers that power them. I also love the mathematics and power of machine learning. Spending a majority of my time learning how to apply what I learn to production. In the future I will move into a role in the tech industry. A position where I could gain experience as a developer, as well as a machine learning engineer.
-							</p>
-							<p>
-								If you would like to know more, I have included a question and answer section below. Feel free to message me if you have project ideas, want to collaborate, or even just want to say hi!
-							</p>
+							<p>Nine months ago I was in a new city at a dead end job. After some serious self reflection about my passions and interests, I commited to learning everything I could about machine learning, data science, and the tech industry. I built my own curriculum, a hodgepodge of hundreds of websites and forums, and committed between 4-6 hours each day to learning the basics.</p>
+
+<p>Fast forward to today where I have enrolled in an excellent computer science program. I now publish my own blog posts to help others learn about everything from data science to deep learning. I am excited by all the things I have learned over the last few months, and I love that I get to work on something I am passionate about each day.</p>
+
+<p>However, I still have a long way to go. The next few months I will focus on teaching others and implementing machine learning models in real world production systems. I further hope to get internship experience so I can engage with other like-minded people and get more experience building intelligent systems for use in the real  world.</p>
 
 
 						</div>
@@ -118,12 +114,11 @@
 									<div class="menu-content">
 											<div class="title text-center">
 													<h1 class="mb-10">Skills Expertisse</h1>
-													 1 - Basic<span style="display: inline-block; width: 2ch;">&#9;</span>
-														 2 - Novice<span style="display: inline-block; width: 2ch;">&#9;</span>
+													  1 - Basic <span style="display: inline-block; width: 2ch;">&#9;</span>
+														 2 - Novice <span style="display: inline-block; width: 2ch;">&#9;</span>
 														 3 - Intermediate<span style="display: inline-block; width: 2ch;">&#9;</span>
-														 <p>
-															4 - Advanced<span style="display: inline-block; width: 2ch;">&#9;</span>
-															 5 - Expert</p>
+														  <p>4 - Advanced<span style="display: inline-block; width: 2ch;">&#9;</span>
+															 5 - Expert<p/>
 
 											</div>
 
@@ -137,7 +132,7 @@
 
 
 
-					<div class="container">
+				<div class="container">
 						<div class="row skillbar-wraps">
 							<div class="col-lg-4 skill-left">
 								<h4 class="text-center pt-50"> Devops </h4>
@@ -149,9 +144,9 @@
 								</div>
 								<div class="single-skill">
 									<p>
-										Database Manipulation (SQL) -   2
+										Database Manipulation (SQL) -   3
 									</p>
-									<div class="skill" data-width="40"></div>
+									<div class="skill" data-width="60"></div>
 								</div>
 								<div class="single-skill">
 									<p>
@@ -166,14 +161,14 @@
 								<h4 class="text-center pt-50"> Data Analytics </h4>
 								<div class="single-skill">
 									<p>
-										Visualizations and Presentation - 4
+										Visualization and Presentation - 5
 									</p>
-									<div class="skill" data-width="80"></div>
+									<div class="skill" data-width="100"></div>
 								</div>
 
 								<div class="single-skill">
 									<p>
-										Data Cleaning - 4
+										Data Munging - 4
 									</p>
 									<div class="skill" data-width="80"></div>
 								</div>
@@ -198,13 +193,13 @@
 
 								<div class="single-skill">
 									<p>
-										NLP (NLTK) - 3
+										Natural Language Processing - 3
 									</p>
 									<div class="skill" data-width="60"></div>
 								</div>
 								<div class="single-skill">
 									<p>
-										Predictive Analytics (SKLearn) - 3
+										Predictive Modelling (SKLearn) - 3
 									</p>
 									<div class="skill" data-width="60"></div>
 								</div>
@@ -214,7 +209,6 @@
 					</div>
 
 					</section>
-
 
 
 
@@ -282,7 +276,9 @@
 											<a href="" class="active">Why did you make this website?</a>
 										</dt>
 										<dd style="display: block;">
-										I built this website to share my projects and motivations with others. In doing this, I hope to show my experience and interest in computer vision and web application development. As an added benefit of making this site, I was able to develop my front-end web design skills in setting the layout, as well as my back-end development skills by hosting this site on DigitalOcean.
+											I created and deployed this website on a private <a href="https://www.digitalocean.com/">DigitalOcean</a> server so that I could learn more about web app design and back-end development. I believe that knowledge of <b>both data science and back-end development</b> is the secret to seamless implementation of artificial intelligence in existing web technologies.</p>
+
+	   <p> In the future I will use this website as a nesting ground for web-based computer vision and NLP models. Though I don't expect it to be anything more than a portfolio site, I strongly suspect that these skills will be crucial to technological development in the years to come.</p>
 
 										</dd>
 
@@ -290,14 +286,17 @@
 											<a href="">How long have you been practicing machine learning?</a>
 										</dt>
 										<dd style="display: none;">
-										I discovered machine learning a year ago after graduating from Baylor University. Since then I have immersed myself in the data science and machine learning communities. Spending the last few months learning about the mathematical and statistical foundations of the field, as well as implementing the algorithms in personal projects.
+										<p>I discovered machine learning a year ago after graduating from Baylor University. Since then I have immersed myself in data science communities on <a href="https://medium.com/">Medium</a> and across the web.</p>
+
+										<p>I have pushed myself to not only understand the theory behind machine learning, but also the constraints that productionizing artificial intelligence entails.</p>
 										</dd>
 
 										<dt>
 											<a href="">Do you have any experience with database management?</a>
 										</dt>
 										<dd style="display: none;">
-										Though I have had experience with scraping, cleaning, and storing datasets locally, I have not had exposure to any of the major database systems. I intend to work more with MySQL and MongoDB as soon as I come to a project that would benefit from having used these tools.
+										<p>I have hosted and deployed my own MySQL database with this website. I have a intermediate knowledge of SQL queries, and have had experience working with AWS and GCP database servers through SSH.</p>
+										<p>By renting servers from DigitalOcean, GCP, and AWS I have been able to develop my own back end production environment. I believe that data scientists who can own every step of the ML lifecycle will be invaluable in the coming years..</p>
 																			</dd>
 
 
@@ -305,7 +304,8 @@
 											<a href="">Why are you interested in computer vision / machine learning?</a>
 										</dt>
 										<dd style="display: none;">
-										Everyday I read a new Medium post about a business that was able to use machine learning or computer vision to provide value for their clients. Despite the movement towards integrating AI into existing technologies, the implementation of machine learning (especially computer vision) is still in its infancy. This field is the wildwest, and I want to work with the pioneers and innovators that create new and amazing things.
+											<p>I am curious by nature. Machine learning and computer vision are both excellent tools to understand the world better. </p>
+										<p>Despite the movement towards integrating AI into existing technologies, the implementation of machine learning (especially computer vision) is still in its infancy. This field is the wildwest, and I want to work with the pioneers and innovators that create new and amazing things.</p>
 										</dd>
 
 
@@ -313,7 +313,9 @@
 											<a href="">What industry are you looking to work in?</a>
 										</dt>
 										<dd style="display: none;">
-										I am very interested in web application development. I am drawn towards the industry's focus on rapid improvement, innovation, and team-oriented creativity. Furthermore, I think when it comes to improving existing technologies there is a great deal of low-hanging fruit to be reached thanks to the movement towards microservice architecture and docker containerization. These developments make machine learning more integrable than ever.
+										<p>I am very interested in web application development. I think the best fit for me will be a career in the tech industry.</p>
+
+										<p> I am drawn towards the industry's focus on rapid improvement, innovation, and team-oriented creativity. Furthermore, I think when it comes to improving existing technologies there is a great deal of low-hanging fruit to be reached thanks to the movement towards microservice architecture and docker containerization. These developments make machine learning more integrable than ever.</p>
 										</dd>
 
 
@@ -321,7 +323,7 @@
 										<a href=""> What kind of work do you see yourself doing? </a>
 									</dt>
 									<dd style="display: none;">
-									I am interested in building modular machine learning applications that can communicate with the backend architectures of existing applications. Position titles that do this work are not well defined, so I like to describe my perfect future position to be a mix of data science, machine learning engineering, and devops. Essentially a computer vision specialist with the skills to deploy a model application to production.
+									<p>I am interested in building modular machine learning applications that can communicate with the back end architectures of existing applications.</p><p> Position titles that do this work are not well defined. I describe my perfect future position to be a mix of data science, machine learning engineering, and devops. Essentially a machine learning specialist with the skills to deploy a model application to production.</p>
 									</dd>
 								</dl>
 
