--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 							<h2 class="mt-10 mb-20">Harrison Jansma</h2>
 							<p>
-								Data scientist, machine learning engineer, and web app developer.
+								Data scientist, machine learning engineer, and web application developer.
 							</p>
 
 							<a href="#portfolio" class="primary-btn text-uppercase mb-20">My Projects</a>
@@ -273,15 +273,15 @@
 
 				<div class="single-skill">
 					<p>
-						Natural Language Processing - 3
+						Natural Language Processing - 4
 					</p>
-					<div class="skill" data-width="60"></div>
+					<div class="skill" data-width="80"></div>
 				</div>
 				<div class="single-skill">
 					<p>
-						Predictive Modelling (SKLearn) - 3
+						Predictive Modelling (SKLearn) - 4
 					</p>
-					<div class="skill" data-width="60"></div>
+					<div class="skill" data-width="80"></div>
 				</div>
 			</div>
 
