Career Fair Rework

--- a/about.html
+++ b/about.html
@@ -44,23 +44,19 @@
 								<li><a href="about.html">About</a></li>
 
 
-								<li class="menu-has-children"><a>Portfolio</a>
-									<ul style="display: none;">
-										<li><a href="portfolio.html">Featured Projects</a></li>
-										<li><a href="archive.html">Projects Archive</a></li>
-
-									</ul>
+								<li><a href="archive.html">Portfolio</a>
 								</li>
 
 
 								<li><a href="contact.html">Contact</a></li>
+								<li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 								</ul>
 							</ul>
+
 						</nav><!-- #nav-menu-container -->
 					</div>
 				</div>
 			</header><!-- #header -->
-
 			<!-- start banner Area -->
 			<section class="about-banner">
 				<div class="container">
@@ -94,11 +90,11 @@
 
 
 						<div class="col-lg-12 pt-60">
-							<p>Nine months ago I was in a new city at a dead end job. After some serious self reflection about my passions and interests, I commited to learning everything I could about machine learning, data science, and the tech industry. I built my own curriculum, a hodgepodge of hundreds of websites and forums, and committed between 4-6 hours each day to learning the basics.</p>
+							<p>Nine months ago I was in a new city at a dead end job. After some serious self-reflection about my passions and interests, I committed to learning everything I could about machine learning, data science, and the tech industry. I built my own curriculum, a hodgepodge of hundreds of websites and forums, and committed between 4-6 hours each day to learn the basics.</p><p>
 
-<p>Fast forward to today where I have enrolled in an excellent computer science program. I now publish my own blog posts to help others learn about everything from data science to deep learning. I am excited by all the things I have learned over the last few months, and I love that I get to work on something I am passionate about each day.</p>
+Fast forward to today where I have enrolled in an excellent computer science program. I now publish my own blog posts to help others learn about everything from data science to deep learning. I am excited by all the things I have learned over the last few months, and I love that I get to work on something I am passionate about each day.</p><p>
 
-<p>However, I still have a long way to go. The next few months I will focus on teaching others and implementing machine learning models in real world production systems. I further hope to get internship experience so I can engage with other like-minded people and get more experience building intelligent systems for use in the real  world.</p>
+However, I still have a long way to go. The next few months I will focus on teaching others and implementing machine learning models in real world production systems. I further hope to get internship experience so I can engage with other like-minded people and get more experience building intelligent systems for use in the real-world.</p>
 
 
 						</div>
