--- a/contact.html
+++ b/contact.html
@@ -32,34 +32,31 @@
 		</head>
 
 		<body>
-		  <header id="header">
-		    <div class="container main-menu">
-		    	<div class="row align-items-center justify-content-between d-flex">
-			      <div class id="logo">
+			<header id="header">
+				<div class="container main-menu">
+					<div class="row align-items-center justify-content-between d-flex">
+						<div class id="logo">
 							<a href="index.html"><h3>H. Jansma </h3></a>
 					 </div>
-			      <nav id="nav-menu-container">
-			        <ul class="nav-menu">
-			          <li><a href="index.html">Home</a></li>
-			          <li><a href="about.html">About</a></li>
+						<nav id="nav-menu-container">
+							<ul class="nav-menu">
+								<li><a href="index.html">Home</a></li>
+								<li><a href="about.html">About</a></li>
 
 
-								<li class="menu-has-children"><a>Portfolio</a>
-			            <ul style="display: none;">
-		            	  <li><a href="portfolio.html">Featured Projects</a></li>
-										<li><a href="archive.html">Projects Archive</a></li>
-
-			            </ul>
-			          </li>
+								<li><a href="archive.html">Portfolio</a>
+								</li>
 
 
-			          <li><a href="contact.html">Contact</a></li>
+								<li><a href="contact.html">Contact</a></li>
+								<li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 								</ul>
-			        </ul>
-			      </nav><!-- #nav-menu-container -->
-		    	</div>
-		    </div>
-		  </header><!-- #header -->
+							</ul>
+
+						</nav><!-- #nav-menu-container -->
+					</div>
+				</div>
+			</header><!-- #header -->
 
 			<!-- start banner Area -->
 			<section class="relative about-banner">
