--- a/index.html
+++ b/index.html
@@ -32,34 +32,31 @@
 		</head>
 
 		<body>
-		  <header id="header">
-		    <div class="container main-menu">
-		    	<div class="row align-items-center justify-content-between d-flex">
-			      <div class id="logo">
+			<header id="header">
+				<div class="container main-menu">
+					<div class="row align-items-center justify-content-between d-flex">
+						<div class id="logo">
 							<a href="index.html"><h3>H. Jansma </h3></a>
 					 </div>
-			      <nav id="nav-menu-container">
-			        <ul class="nav-menu">
-			          <li><a href="index.html">Home</a></li>
-			          <li><a href="about.html">About</a></li>
+						<nav id="nav-menu-container">
+							<ul class="nav-menu">
+								<li><a href="index.html">Home</a></li>
+								<li><a href="about.html">About</a></li>
 
 
-								<li class="menu-has-children"><a>Portfolio</a>
-			            <ul style="display: none;">
-		            	  <li><a href="portfolio.html">Featured Projects</a></li>
-										<li><a href="archive.html">Projects Archive</a></li>
-
-			            </ul>
-			          </li>
+								<li><a href="archive.html">Portfolio</a>
+								</li>
 
 
-			          <li><a href="contact.html">Contact</a></li>
+								<li><a href="contact.html">Contact</a></li>
+								<li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 								</ul>
-			        </ul>
-			      </nav><!-- #nav-menu-container -->
-		    	</div>
-		    </div>
-		  </header><!-- #header -->
+							</ul>
+
+						</nav><!-- #nav-menu-container -->
+					</div>
+				</div>
+			</header><!-- #header -->
 
 			<!-- start banner Area -->
 			<section class="banner-area">
@@ -70,7 +67,7 @@
 
 							<h2 class="mt-10 mb-20">Harrison Jansma</h2>
 							<p>
-								Data scientist, machine learning engineer, and web application developer.
+								Data scientist and machine learning engineer.
 							</p>
 
 							<a href="#portfolio" class="primary-btn text-uppercase mb-20">My Projects</a>
@@ -94,7 +91,10 @@
 							<br>
 
 							<blockquote class="generic-blockquote">
-								<p>I am passionate about applying new technologies to create amazing things. Siri, Google Assistant, and Amazon Alexa are all examples of what dedicated and curious people can achieve in the dizzying advancements of our time. With a strong understanding of mathematics and rich experiences in machine learning, I aim to be part of the team of makers and innovators.
+								<p class="mt-14">I am largely a self-taught data scientist. Over the last 9 months, I left my job, started studying machine learning full time, and applied to a Master's Program in Computer Science.
+									I am doing all of this because my passion and goal is implementing machine learning applications in the real world. This means a strong understanding of predictive modeling and production environments.
+
+								</p><p> In the near future, I hope to get internship experience in the Tech Industry. So I can practice my craft alongside like-minded problem solvers.
 							</p>
 							</blockquote>
 							<a href="about.html" class="primary-btn text-uppercase">About me</a>
@@ -456,7 +456,48 @@
 				</div>
 			</section>
 			<!-- End portfolio-area Area -->
+<hr>
+			<!-- Start price Area -->
+<section class="price-area section-gap">
+				<div class="container">
+					<div class="row d-flex justify-content-center">
 
+							<div class="menu-content pb-20 col-lg-8">
+							<div class="title text-center">
+								<h1 class="mb-10">Other Platforms</h1>
+
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-6 col-md-6 single-price">
+							<a href="https://github.com/harrisonjansma">
+							<div class="top-part">
+								<img src="img/github.jpg" height=300 width=300>
+								<h4>GitHub</h4>
+								<p class="mt-10">My base-of-operations for all things machine learning, computer vision, and back-end development.</p>
+							</div>
+						</a>
+
+
+						</div>
+						<div class="col-lg-6 col-md-6 single-price">
+							<a href="https://medium.com/@harrisonjansma">
+							<div class="top-part">
+								<img src="img/medium.png" height=300 width=300>
+								<h4>Medium</h4>
+								<p class="mt-10">All my life I have been an avid sci-fi and fantasy reader. Very recently I have begun writing about my research, thoughts, and experiences. Publishing them for the world to see. </p>
+							</div>
+						</a>
+
+
+						</div>
+
+
+					</div>
+				</div>
+			</section>
+			<!-- End price Area -->
 
 
 			<!-- start footer Area -->
