--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
 				<div class="container main-menu">
 					<div class="row align-items-center justify-content-between d-flex">
 						<div class id="logo">
-							<a href="index.html"><h3>H. Jansma </h3></a>
+							<a href="index"><h3>H. Jansma </h3></a>
 					 </div>
 						<nav id="nav-menu-container">
 							<ul class="nav-menu">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="about.html">About</a></li>
+								<li><a href="index">Home</a></li>
+								<li><a href="about">About</a></li>
 
 
-								<li><a href="archive.html">Portfolio</a>
+								<li><a href="archive">Portfolio</a>
 								</li>
 
 
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="contact">Contact</a></li>
 								<li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 								</ul>
 							</ul>
@@ -57,7 +57,6 @@
 					</div>
 				</div>
 			</header><!-- #header -->
-
 			<!-- start banner Area -->
 			<section class="banner-area">
 				<div class="container">
@@ -91,13 +90,13 @@
 							<br>
 
 							<blockquote class="generic-blockquote">
-								<p class="mt-14">I am largely a self-taught data scientist. Over the last 9 months, I left my job, started studying machine learning full time, and applied to a Master's Program in Computer Science.
+								<p class="mt-14">I am largely a self-taught data scientist. Over the last 9 months, I left my job, started studying machine learning full time, and enrolled in a Master's Program in Computer Science.
 									I am doing all of this because my passion and goal is implementing machine learning applications in the real world. This means a strong understanding of predictive modeling and production environments.
 
 								</p><p> In the near future, I hope to get internship experience in the Tech Industry. So I can practice my craft alongside like-minded problem solvers.
 							</p>
 							</blockquote>
-							<a href="about.html" class="primary-btn text-uppercase">About me</a>
+							<a href="about" class="primary-btn text-uppercase">About me</a>
 
 					</div>
 				</div>
@@ -368,14 +367,14 @@
 														<div class="overlay overlay-bg"></div>
 														 <img class="image img-fluid" src="img/hucklecover2.png" alt="">
 													</div>
-						<a href="GAP.html">
+						<a href="GAP">
 							<div class="middle">
 								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
 							</div>
 					</a>
 												</div>
 					<div class="p-inner">
-						<a href="GAP.html">
+						<a href="GAP">
 							<h5>GAP: Object Localization</h5></a>
 						<div class="cat">July 16, 2018</div>
 					</div>
@@ -390,14 +389,14 @@
 														<div class="overlay overlay-bg"></div>
 														 <img class="image img-fluid" src="img/applesquare.jpg" alt="">
 													</div>
-						<a href="apple.html">
+						<a href="apple">
 							<div class="middle">
 								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
 							</div>
 					</a>
 												</div>
 					<div class="p-inner">
-						<a href="apple.html">
+						<a href="apple">
 							<h5>Apple Sentiment Analysis</h5></a>
 						<div class="cat">June 20, 2018</div>
 					</div>
@@ -410,14 +409,14 @@
 														<div class="overlay overlay-bg"></div>
 														 <img class="image img-fluid" src="img/gassquare.jpg" alt="">
 													</div>
-						<a href="toxic.html">
+						<a href="toxic">
 							<div class="middle">
 								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
 							</div>
 						</a>
 												</div>
 													<div class="p-inner">
-														<a href="toxic.html">
+														<a href="toxic">
 															<h5>Toxic Topic Modelling</h5></a>
 															<div class="cat">June 13, 2018</div>
 													</div>
@@ -430,14 +429,14 @@
 														<div class="overlay overlay-bg"></div>
 														 <img class="image img-fluid" src="img/clustering.png" alt="">
 													</div>
-						<a href="Clustering.html">
+						<a href="Clustering">
 							<div class="middle">
 								<div class="text justify-content-center d-flex"><img src="img/preview.png" alt=""></div>
 							</div>
 						</a>
 												</div>
 													<div class="p-inner">
-														<a href="Clustering.html">
+														<a href="Clustering">
 															<h5>Clustering Mental Health</h5></a>
 															<div class="cat">May 23, 2018</div>
 													</div>
@@ -452,7 +451,7 @@
 					</div>
 
 					<div class="container text-right mt-10">
-					<a href="archive.html" class="primary-btn text-uppercase">Project Archive</a>
+					<a href="archive" class="primary-btn text-uppercase">Project Archive</a>
 				</div>
 			</section>
 			<!-- End portfolio-area Area -->
