--- a/about.html
+++ b/about.html
@@ -36,19 +36,19 @@
 				<div class="container main-menu">
 					<div class="row align-items-center justify-content-between d-flex">
 						<div class id="logo">
-							<a href="index.html"><h3>H. Jansma </h3></a>
+							<a href="/"><h3>H. Jansma </h3></a>
 					 </div>
 						<nav id="nav-menu-container">
 							<ul class="nav-menu">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="about.html">About</a></li>
+								<li><a href="/">Home</a></li>
+								<li><a href="about">About</a></li>
 
 
-								<li><a href="archive.html">Portfolio</a>
+								<li><a href="archive">Portfolio</a>
 								</li>
 
 
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="contact">Contact</a></li>
 								<li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 								</ul>
 							</ul>
@@ -65,7 +65,7 @@
 							<h1 class="text-white">
 								About Me
 							</h1>
-							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="about.html"> About Me</a></p>
+							<p class="text-white link-nav"><a href="/">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="about"> About Me</a></p>
 						</div>
 					</div>
 				</div>
