--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 				<div class="container main-menu">
 					<div class="row align-items-center justify-content-between d-flex">
 						<div class id="logo">
-							<a href="index"><h3>H. Jansma </h3></a>
+							<a href="/"><h3>H. Jansma </h3></a>
 					 </div>
 						<nav id="nav-menu-container">
 							<ul class="nav-menu">
-								<li><a href="index">Home</a></li>
+								<li><a href="/">Home</a></li>
 								<li><a href="about">About</a></li>
 
 
