--- a/portfolio.html
+++ b/portfolio.html
@@ -36,19 +36,19 @@
 				<div class="container main-menu">
 					<div class="row align-items-center justify-content-between d-flex">
 						<div class id="logo">
-							<a href="index.html"><h3>H. Jansma </h3></a>
+							<a href="/"><h3>H. Jansma </h3></a>
 					 </div>
 						<nav id="nav-menu-container">
 							<ul class="nav-menu">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="about.html">About</a></li>
+								<li><a href="/">Home</a></li>
+								<li><a href="about">About</a></li>
 
 
-								<li><a href="archive.html">Portfolio</a>
+								<li><a href="archive">Portfolio</a>
 								</li>
 
 
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="contact">Contact</a></li>
 								<li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 								</ul>
 							</ul>
@@ -66,7 +66,7 @@
 							<h1 class="text-white">
 								Portfolio
 							</h1>
-							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="portfolio.html"> Portfolio</a></p>
+							<p class="text-white link-nav"><a href="/">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="portfolio"> Portfolio</a></p>
 						</div>
 					</div>
 				</div>
@@ -142,14 +142,14 @@
 														<div class="overlay overlay-bg"></div>
 														 <img class="image img-fluid" src="img/hucklecover2.png" alt="">
 													</div>
-						<a href="GAP.html">
+						<a href="GAP">
 							<div class="middle">
 								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
 							</div>
 					</a>
 												</div>
 					<div class="p-inner">
-						<a href="GAP.html">
+						<a href="GAP">
 							<h5>GAP: Object Localization</h5></a>
 						<div class="cat">July 16, 2018</div>
 					</div>
@@ -160,14 +160,14 @@
 														<div class="overlay overlay-bg"></div>
 														 <img class="image img-fluid" src="img/applesquare.jpg" alt="">
 													</div>
-						<a href="apple.html">
+						<a href="apple">
 							<div class="middle">
 								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
 							</div>
 					</a>
 												</div>
 					<div class="p-inner">
-						<a href="apple.html">
+						<a href="apple">
 							<h5>Apple Sentiment Analysis</h5></a>
 						<div class="cat">June 20, 2018</div>
 					</div>
@@ -180,14 +180,14 @@
 														<div class="overlay overlay-bg"></div>
 														 <img class="image img-fluid" src="img/gassquare.jpg" alt="">
 													</div>
-						<a href="toxic.html">
+						<a href="toxic">
 							<div class="middle">
 								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
 							</div>
 						</a>
 												</div>
 													<div class="p-inner">
-														<a href="toxic.html">
+														<a href="toxic">
 															<h5>Toxic Topic Modelling</h5></a>
 															<div class="cat">June 13, 2018</div>
 													</div>
@@ -200,14 +200,14 @@
 														<div class="overlay overlay-bg"></div>
 														 <img class="image img-fluid" src="img/clustering.png" alt="">
 													</div>
-						<a href="Clustering.html">
+						<a href="Clustering">
 							<div class="middle">
 								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
 							</div>
 						</a>
 												</div>
 													<div class="p-inner">
-														<a href="Clustering.html">
+														<a href="Clustering">
 															<h5>Clustering Mental Health</h5></a>
 															<div class="cat">May 23, 2018</div>
 													</div>
@@ -222,7 +222,7 @@
 					</div>
 
 					<div class="container text-right mt-10">
-					<a href="archive.html" class="primary-btn text-uppercase">Project Archive</a>
+					<a href="archive" class="primary-btn text-uppercase">Project Archive</a>
 				</div>
 			</section>
 
