--- a/Clustering.html
+++ b/Clustering.html
@@ -11794,7 +11794,7 @@ div#notebook {
 
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">H. Jansma</a>
+      <a class="navbar-brand" href="index">H. Jansma</a>
 
     </div>
   </nav>
