--- a/GAP.html
+++ b/GAP.html
@@ -11792,7 +11792,7 @@ div#notebook {
 <body>
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">H. Jansma</a>
+      <a class="navbar-brand" href="index">H. Jansma</a>
 
     </div>
   </nav>
