--- a/Titanic.html
+++ b/Titanic.html
@@ -11786,7 +11786,7 @@ div#notebook {
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">H. Jansma</a>
+      <a class="navbar-brand" href="index">H. Jansma</a>
 
     </div>
   </nav>
