home photo change

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<a href="#portfolio" class="primary-btn text-uppercase mb-20">My Projects</a>
 						</div>
 						<div class="col-lg-6 col-md-6 col-xs-6 banner-right d-flex align-self-center">
-							<img  class="img-fluid" src="img/cover2.jpg">
+							<img  class="img-fluid" src="img/harrison.png">
 						</div>
 					</div>
 				</div>
@@ -90,7 +90,7 @@
 							<br>
 
 							<blockquote class="generic-blockquote">
-								<p class="mt-14">I am largely a self-taught data scientist. Over the last 9 months, I left my job, started studying machine learning full time, and enrolled in a Master's Program in Computer Science.
+								<p class="mt-14">I am a self-taught data scientist. Over the last 9 months, I left my job, started studying machine learning full time, and enrolled in a Master's Program in Computer Science.
 									I am doing all of this because my passion and goal is implementing machine learning applications in the real world. This means a strong understanding of predictive modeling and production environments.
 
 								</p><p> In the near future, I hope to get internship experience in the Tech Industry. So I can practice my craft alongside like-minded problem solvers.
@@ -308,7 +308,7 @@
 
 							<div class="filters">
 									<ul>
-											<li class="active" data-filter="*">All</li>
+											<li data-filter="*">All</li>
 											<li data-filter=".ComputerVision">Computer Vision</li>
 											<li data-filter=".NLP">NLP</li>
 											<li data-filter=".WebApps">Web Apps</li>
@@ -485,7 +485,7 @@
 							<div class="top-part">
 								<img src="img/medium.png" height=300 width=300>
 								<h4>Medium</h4>
-								<p class="mt-10">All my life I have been an avid sci-fi and fantasy reader. Very recently I have begun writing about my research, thoughts, and experiences. Publishing them for the world to see. </p>
+								<p class="mt-10">All my life I have been an avid sci-fi and fantasy reader. Recently I have begun writing about my research, thoughts, and experiences. </p>
 							</div>
 						</a>
 
